<resources>
    <string name="app_name">Habitify</string>
    <string name="vidwell">VidWell</string>
    <string name="habitify">Habitify</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="height_cm">Height (cm)</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="your_bmi">Your BMI</string>
    <string name="bmi_categories">BMI Categories</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Normal weight</string>
    <string name="overweight">Overweight</string>
    <string name="obese">Obese</string>
    <string name="_18_5"><![CDATA[< 18.5]]></string>
    <string name="profile_picture">Profile Picture</string>
    <string name="user_name">User Name</string>
    <string name="member_since_2024">Member since 2024</string>
    <string name="day_streak">Day Streak</string>
    <string name="total_habits">Total Habits</string>
    <string name="completed">Completed</string>
    <string name="your_progress">Your Progress</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="search_habits">Search habits...</string>
</resources>